[package]
name = "setproxy"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["setproxy", "proxy"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "setproxy"
